infra/aks/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gods-eye-view-auth
  labels:
    app.kubernetes.io/name: gods-eye-view-auth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gods-eye-view-auth
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
